--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "mongoose": "^7.3.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.6",
+    "path": "^0.12.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
